--- a/Libropouch/App.config
+++ b/Libropouch/App.config
@@ -16,6 +16,9 @@
             <setting name="Language" serializeAs="String">
                 <value>en-US</value>
             </setting>
+            <setting name="UsbAutoDetect" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Libropouch.Properties.Settings>
     </userSettings>
     <applicationSettings>
