Fetching file list from the  connected reader finished

--- a/Libropouch/App.config
+++ b/Libropouch/App.config
@@ -29,6 +29,9 @@
             <setting name="UsbModel" serializeAs="String">
                 <value>Kindle</value>
             </setting>
+            <setting name="RootDir" serializeAs="String">
+                <value>/Documentss/</value>
+            </setting>
         </Libropouch.Properties.Settings>
     </applicationSettings>
 </configuration>
