Info function added and working

--- a/Libropouch/App.config
+++ b/Libropouch/App.config
@@ -30,7 +30,10 @@
                 <value>Kindle</value>
             </setting>
             <setting name="RootDir" serializeAs="String">
-                <value>/Documentss/</value>
+                <value>/Documents/</value>
+            </setting>
+            <setting name="UseInfoBanner" serializeAs="String">
+                <value>True</value>
             </setting>
         </Libropouch.Properties.Settings>
     </applicationSettings>
