--- a/Libropouch/Properties/Settings.settings
+++ b/Libropouch/Properties/Settings.settings
@@ -15,7 +15,10 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="RootDir" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">/Documentss/</Value>
+      <Value Profile="(Default)">/Documents/</Value>
+    </Setting>
+    <Setting Name="UseInfoBanner" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
