Starting with local book dir and list handling

--- a/Libropouch/App.config
+++ b/Libropouch/App.config
@@ -19,6 +19,9 @@
             <setting name="UsbAutoDetect" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="FilesDir" serializeAs="String">
+                <value>books</value>
+            </setting>
         </Libropouch.Properties.Settings>
     </userSettings>
     <applicationSettings>
@@ -34,6 +37,9 @@
             </setting>
             <setting name="UseInfoBanner" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="FileExtensions" serializeAs="String">
+                <value>mobi,epub,lit,pdf</value>
             </setting>
         </Libropouch.Properties.Settings>
     </applicationSettings>
