Foundations of adding books into the library

--- a/Libropouch/App.config
+++ b/Libropouch/App.config
@@ -39,7 +39,7 @@
                 <value>True</value>
             </setting>
             <setting name="FileExtensions" serializeAs="String">
-                <value>mobi,epub,lit,pdf</value>
+                <value>mobi;epub;lit;pdf</value>
             </setting>
         </Libropouch.Properties.Settings>
     </applicationSettings>
