--- a/Libropouch/Properties/Settings.settings
+++ b/Libropouch/Properties/Settings.settings
@@ -21,7 +21,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="FileExtensions" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">mobi,epub,lit,pdf</Value>
+      <Value Profile="(Default)">mobi;epub;lit;pdf</Value>
     </Setting>
     <Setting Name="FilesDir" Type="System.String" Scope="User">
       <Value Profile="(Default)">books</Value>
