Added reader selection to settings

--- a/Libropouch/App.config
+++ b/Libropouch/App.config
@@ -16,8 +16,17 @@
             <setting name="Language" serializeAs="String">
                 <value>en-US</value>
             </setting>
-            <setting name="UsbAutoDetect" serializeAs="String">
+            <setting name="UsbPnpDeviceId" serializeAs="String">
+                <value>KINDLE</value>
+            </setting>
+            <setting name="UsbModel" serializeAs="String">
+                <value>Kindle</value>
+            </setting>
+            <setting name="UsbAutoSync" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="DeviceRootDir" serializeAs="String">
+                <value>/Documents/</value>
             </setting>
             <setting name="FilesDir" serializeAs="String">
                 <value>books</value>
@@ -26,15 +35,6 @@
     </userSettings>
     <applicationSettings>
         <Libropouch.Properties.Settings>
-            <setting name="UsbPnpDeviceId" serializeAs="String">
-                <value>KINDLE</value>
-            </setting>
-            <setting name="UsbModel" serializeAs="String">
-                <value>Kindle</value>
-            </setting>
-            <setting name="RootDir" serializeAs="String">
-                <value>/Documents/</value>
-            </setting>
             <setting name="UseInfoBanner" serializeAs="String">
                 <value>True</value>
             </setting>
