Added reader unknown device selection form in settings. Renamed some keys in the settings file.

--- a/Libropouch/App.config
+++ b/Libropouch/App.config
@@ -16,10 +16,10 @@
             <setting name="Language" serializeAs="String">
                 <value>en-US</value>
             </setting>
-            <setting name="UsbPnpDeviceId" serializeAs="String">
+            <setting name="DevicePnpId" serializeAs="String">
                 <value>KINDLE</value>
             </setting>
-            <setting name="UsbModel" serializeAs="String">
+            <setting name="DeviceModel" serializeAs="String">
                 <value>Kindle</value>
             </setting>
             <setting name="UsbAutoSync" serializeAs="String">
