Added splashscreen + option to turn it off in settings

--- a/Libropouch/App.config
+++ b/Libropouch/App.config
@@ -31,6 +31,9 @@
             <setting name="FilesDir" serializeAs="String">
                 <value>books</value>
             </setting>
+            <setting name="SplashScreen" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Libropouch.Properties.Settings>
     </userSettings>
     <applicationSettings>
