--- a/Libropouch/Libropouch.csproj
+++ b/Libropouch/Libropouch.csproj
@@ -457,6 +457,9 @@
   <ItemGroup>
     <Resource Include="Readers\_unknown.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Img\splashscreen.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
