Some additional from elements styling Also added part of the code to handle  favorite/sync icon toggle clicking in mainwindow

--- a/Libropouch/Libropouch.csproj
+++ b/Libropouch/Libropouch.csproj
@@ -52,6 +52,7 @@
     <ApplicationIcon>kindle.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationFramework.Aero" />
     <Reference Include="ShadoLib">
       <HintPath>..\..\ShadoLib\ShadoLib\bin\Release\ShadoLib.dll</HintPath>
     </Reference>
