--- a/Libropouch/Libropouch.csproj
+++ b/Libropouch/Libropouch.csproj
@@ -100,6 +100,7 @@
       <DependentUpon>Settings.xaml</DependentUpon>
     </Compile>
     <Compile Include="UsbSync.cs" />
+    <Compile Include="Whisperer.cs" />
     <Page Include="AboutBox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
