Added main window hotkeys Added  GNU license file and english user manual file

--- a/Libropouch/Libropouch.csproj
+++ b/Libropouch/Libropouch.csproj
@@ -121,6 +121,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Style\DataGrid1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Style\Global.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -491,6 +495,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Img\tools1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Docs\manual_en.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Docs\licence.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
