Added list of default categories into settings Whisperer for category in the book edit now  lists the default categories, and user defined categories Category and series lists now display alphabetically sorted

--- a/Libropouch/App.config
+++ b/Libropouch/App.config
@@ -34,6 +34,9 @@
             <setting name="SplashScreen" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="DefaultCategories" serializeAs="String">
+                <value>Action;Biography;Essay;Fable;Fantasy;General;Historical;Horror;Humor;Kids;Manga;Mystery;Mythology;Play;Romance;Sci-Fi;Spiritual;Supernatural;Thriller;Western;Young Adult </value>
+            </setting>
         </Libropouch.Properties.Settings>
     </userSettings>
     <applicationSettings>
