Added option to minimize the application into a tray icon

--- a/Libropouch/App.config
+++ b/Libropouch/App.config
@@ -37,6 +37,9 @@
             <setting name="DefaultCategories" serializeAs="String">
                 <value>Action;Biography;Essay;Fable;Fantasy;General;Historical;Horror;Humor;Kids;Manga;Mystery;Mythology;Play;Romance;Sci-Fi;Spiritual;Supernatural;Thriller;Western;Young Adult </value>
             </setting>
+            <setting name="CloseIntoTray" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Libropouch.Properties.Settings>
     </userSettings>
     <applicationSettings>
