Added translation variable for "show console" Empy language value in settings now causes language selection combobox in the setting to have no option selected

--- a/Libropouch/App.config
+++ b/Libropouch/App.config
@@ -14,7 +14,7 @@
     <userSettings>
         <Libropouch.Properties.Settings>
             <setting name="Language" serializeAs="String">
-                <value>en-US</value>
+                <value />
             </setting>
             <setting name="DevicePnpId" serializeAs="String">
                 <value>KINDLE</value>
