Added option to only allow one instance of the application Added option to launch the apoplication during boot, automatically minimized into tray Eviroment.currentdirectory now automatically set to exe's current location

--- a/Libropouch/App.config
+++ b/Libropouch/App.config
@@ -40,6 +40,9 @@
             <setting name="CloseIntoTray" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="OnlyOne" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Libropouch.Properties.Settings>
     </userSettings>
     <applicationSettings>
