--- a/Libropouch/Properties/Settings.settings
+++ b/Libropouch/Properties/Settings.settings
@@ -35,5 +35,8 @@
     <Setting Name="CloseIntoTray" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="OnlyOne" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
