Debug console output is now logged into a file Added one time popup informig the user, that changes in the book edit window are autosaved

--- a/Bookpouch/App.config
+++ b/Bookpouch/App.config
@@ -43,6 +43,9 @@
             <setting name="OnlyOne" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="AutoSavedEditsPopupShown" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Bookpouch.Properties.Settings>
     </userSettings>
     <applicationSettings>
