--- a/Bookpouch/Properties/Settings.settings
+++ b/Bookpouch/Properties/Settings.settings
@@ -38,5 +38,8 @@
     <Setting Name="OnlyOne" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="AutoSavedEditsPopupShown" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
