--- a/Bookpouch/Bookpouch.csproj
+++ b/Bookpouch/Bookpouch.csproj
@@ -519,6 +519,9 @@
   <ItemGroup>
     <Resource Include="Docs\manual_cz.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Img\ornament.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
