Added dialog for the selection of the library location

--- a/Bookpouch/App.config
+++ b/Bookpouch/App.config
@@ -25,10 +25,10 @@
             <setting name="UsbAutoSync" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="DeviceRootDir" serializeAs="String">
+            <setting name="DeviceBooksDir" serializeAs="String">
                 <value>/Documents/</value>
             </setting>
-            <setting name="FilesDir" serializeAs="String">
+            <setting name="BooksDir" serializeAs="String">
                 <value>books</value>
             </setting>
             <setting name="SplashScreen" serializeAs="String">
@@ -44,6 +44,9 @@
                 <value>False</value>
             </setting>
             <setting name="AutoSavedEditsPopupShown" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="BooksDirSelectionOffered" serializeAs="String">
                 <value>False</value>
             </setting>
         </Bookpouch.Properties.Settings>
