--- a/Bookpouch/App.config
+++ b/Bookpouch/App.config
@@ -1,64 +1,85 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Bookpouch.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Bookpouch.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
-    <userSettings>
-        <Bookpouch.Properties.Settings>
-            <setting name="Language" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="DevicePnpId" serializeAs="String">
-                <value>KINDLE</value>
-            </setting>
-            <setting name="DeviceModel" serializeAs="String">
-                <value>Kindle</value>
-            </setting>
-            <setting name="UsbAutoSync" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="DeviceBooksDir" serializeAs="String">
-                <value>/Documents/</value>
-            </setting>
-            <setting name="BooksDir" serializeAs="String">
-                <value>books</value>
-            </setting>
-            <setting name="SplashScreen" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="DefaultCategories" serializeAs="String">
-                <value>Action;Biography;Essay;Fable;Fantasy;General;Historical;Horror;Humor;Kids;Manga;Mystery;Mythology;Play;Romance;Sci-Fi;Spiritual;Supernatural;Thriller;Western;Young Adult </value>
-            </setting>
-            <setting name="CloseIntoTray" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="OnlyOne" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="AutoSavedEditsPopupShown" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="BooksDirSelectionOffered" serializeAs="String">
-                <value>False</value>
-            </setting>
-        </Bookpouch.Properties.Settings>
-    </userSettings>
-    <applicationSettings>
-        <Bookpouch.Properties.Settings>
-            <setting name="UseInfoBanner" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="FileExtensions" serializeAs="String">
-                <value>mobi;epub;lit;pdf</value>
-            </setting>
-        </Bookpouch.Properties.Settings>
-    </applicationSettings>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="Bookpouch.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="Bookpouch.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
+  </startup>
+  <userSettings>
+    <Bookpouch.Properties.Settings>
+      <setting name="Language" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="DevicePnpId" serializeAs="String">
+        <value>KINDLE</value>
+      </setting>
+      <setting name="DeviceModel" serializeAs="String">
+        <value>Kindle</value>
+      </setting>
+      <setting name="UsbAutoSync" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="DeviceBooksDir" serializeAs="String">
+        <value>/Documents/</value>
+      </setting>
+      <setting name="BooksDir" serializeAs="String">
+        <value>books</value>
+      </setting>
+      <setting name="SplashScreen" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="DefaultCategories" serializeAs="String">
+        <value>Action;Biography;Essay;Fable;Fantasy;General;Historical;Horror;Humor;Kids;Manga;Mystery;Mythology;Play;Romance;Sci-Fi;Spiritual;Supernatural;Thriller;Western;Young Adult </value>
+      </setting>
+      <setting name="CloseIntoTray" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="OnlyOne" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="AutoSavedEditsPopupShown" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="BooksDirSelectionOffered" serializeAs="String">
+        <value>False</value>
+      </setting>
+    </Bookpouch.Properties.Settings>
+  </userSettings>
+  <applicationSettings>
+    <Bookpouch.Properties.Settings>
+      <setting name="UseInfoBanner" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="FileExtensions" serializeAs="String">
+        <value>mobi;epub;lit;pdf</value>
+      </setting>
+    </Bookpouch.Properties.Settings>
+  </applicationSettings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="v11.0" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="System.Data.SQLite" />
+      <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".Net Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+      <remove invariant="System.Data.SQLite.EF6" />
+      <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".Net Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
+    </DbProviderFactories>
+  </system.data>
 </configuration>
