Fixed long book title wraping in the book grid detail Also reorganized the structure elements there Edit and Directory buttons are now icons instead of standard text buttons

--- a/Bookpouch/Bookpouch.csproj
+++ b/Bookpouch/Bookpouch.csproj
@@ -112,6 +112,9 @@
     </Compile>
     <Compile Include="UsbSync.cs" />
     <Compile Include="Whisperer.cs" />
+    <Compile Include="Window1.xaml.cs">
+      <DependentUpon>Window1.xaml</DependentUpon>
+    </Compile>
     <Page Include="AboutBox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -157,6 +160,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Style\Info.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Window1.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -528,6 +535,7 @@
     <Resource Include="Img\ornament.png" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Img\folder.png" />
     <Content Include="x64\SQLite.Interop.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
