Added menu button to open  library's root directory

--- a/Bookpouch/Bookpouch.csproj
+++ b/Bookpouch/Bookpouch.csproj
@@ -536,6 +536,7 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Img\folder.png" />
+    <Resource Include="Img\folderSmall.png" />
     <Content Include="x64\SQLite.Interop.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
