--- a/Bookpouch/App.config
+++ b/Bookpouch/App.config
@@ -61,6 +61,9 @@
       <setting name="FileExtensions" serializeAs="String">
         <value>mobi;epub;lit;pdf</value>
       </setting>
+      <setting name="DebugOnStart" serializeAs="String">
+        <value>False</value>
+      </setting>
     </Bookpouch.Properties.Settings>
   </applicationSettings>
   <entityFramework>
