Moved Busy bar functions to separate file Snycing library now shows determinate progress in the busy bar while new books are being added

--- a/Bookpouch/Bookpouch.csproj
+++ b/Bookpouch/Bookpouch.csproj
@@ -84,6 +84,7 @@
     <Compile Include="AboutBox.xaml.cs">
       <DependentUpon>AboutBox.xaml</DependentUpon>
     </Compile>
+    <Compile Include="BusyBar.cs" />
     <Compile Include="Db.cs" />
     <Compile Include="MainWindowInfo.cs" />
     <Compile Include="MainWindowBook.cs" />
