Categories specified in epub files, are now assigned to books automatically Filter updated to filter data directly in the SQL query, instead of pulling the entire list and then filtering it

--- a/Bookpouch/Bookpouch.csproj
+++ b/Bookpouch/Bookpouch.csproj
@@ -86,6 +86,7 @@
     </Compile>
     <Compile Include="BusyBar.cs" />
     <Compile Include="Db.cs" />
+    <Compile Include="Filter.cs" />
     <Compile Include="MainWindowInfo.cs" />
     <Compile Include="MainWindowBook.cs" />
     <Compile Include="BookData.cs" />
