Changed book grid look. Categories added automatically from a book file, are now marked with a different style in the book editing window.

--- a/Bookpouch/App.config
+++ b/Bookpouch/App.config
@@ -51,6 +51,9 @@
       <setting name="BooksDirSelectionOffered" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="OnlyManualCategories" serializeAs="String">
+        <value>False</value>
+      </setting>
     </Bookpouch.Properties.Settings>
   </userSettings>
   <applicationSettings>
