--- a/Bookpouch/Properties/Settings.settings
+++ b/Bookpouch/Properties/Settings.settings
@@ -47,5 +47,8 @@
     <Setting Name="DebugOnStart" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="OnlyManualCategories" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
