Fixed blurry description text in the row detail Added option to ignore  book covers with wrong dimensions during book adding Added some additional fields to the book table Removed category column Added  filter window Changed application icon Some additional changes and fixes

--- a/Bookpouch/App.config
+++ b/Bookpouch/App.config
@@ -54,6 +54,9 @@
       <setting name="OnlyManualCategories" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="CheckCoverDimensions" serializeAs="String">
+        <value>True</value>
+      </setting>
     </Bookpouch.Properties.Settings>
   </userSettings>
   <applicationSettings>
