--- a/Bookpouch/Properties/Settings.settings
+++ b/Bookpouch/Properties/Settings.settings
@@ -50,5 +50,8 @@
     <Setting Name="OnlyManualCategories" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="CheckCoverDimensions" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
