Added new setting for maximum description length (in the book list detail) Some edits to class fields for saving data about books

--- a/Bookpouch/App.config
+++ b/Bookpouch/App.config
@@ -57,6 +57,9 @@
       <setting name="CheckCoverDimensions" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="DescriptionMaxLength" serializeAs="String">
+        <value>1000</value>
+      </setting>
     </Bookpouch.Properties.Settings>
   </userSettings>
   <applicationSettings>
