Added option to save active filter parameters as a named preset

--- a/Bookpouch/App.config
+++ b/Bookpouch/App.config
@@ -60,6 +60,9 @@
       <setting name="DescriptionMaxLength" serializeAs="String">
         <value>1000</value>
       </setting>
+      <setting name="FilterPopupHintShown" serializeAs="String">
+        <value>False</value>
+      </setting>
     </Bookpouch.Properties.Settings>
   </userSettings>
   <applicationSettings>
