--- a/Bookpouch/Properties/Settings.settings
+++ b/Bookpouch/Properties/Settings.settings
@@ -56,5 +56,8 @@
     <Setting Name="DescriptionMaxLength" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1000</Value>
     </Setting>
+    <Setting Name="FilterPopupHintShown" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
