Filter presets are now displayed as buttons under the main menu. Left click activates the preset filter, right click removes the preset.

--- a/Bookpouch/Bookpouch.csproj
+++ b/Bookpouch/Bookpouch.csproj
@@ -86,7 +86,7 @@
     </Compile>
     <Compile Include="BusyBar.cs" />
     <Compile Include="Db.cs" />
-    <Compile Include="Filter.cs" />
+    <Compile Include="MainWindowFilter.cs" />
     <Compile Include="FilterWindow.xaml.cs">
       <DependentUpon>FilterWindow.xaml</DependentUpon>
     </Compile>
