Categories  are now extracted from added MOBI files

--- a/Bookpouch/App.config
+++ b/Bookpouch/App.config
@@ -25,7 +25,7 @@
         <value>Kindle</value>
       </setting>
       <setting name="UsbAutoSync" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="DeviceBooksDir" serializeAs="String">
         <value>/Documents/</value>
