Added limit to displaed items in the whisperer. This limit can be changed in the config file.

--- a/Bookpouch/App.config
+++ b/Bookpouch/App.config
@@ -76,6 +76,9 @@
       <setting name="DebugOnStart" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="WhispererMaxItems" serializeAs="String">
+        <value>30</value>
+      </setting>
     </Bookpouch.Properties.Settings>
   </applicationSettings>
   <entityFramework>
