--- a/Bookpouch/Properties/Settings.settings
+++ b/Bookpouch/Properties/Settings.settings
@@ -59,5 +59,8 @@
     <Setting Name="FilterPopupHintShown" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="WhispererMaxItems" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">30</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
