--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,12 @@
 # Build results
 
 [Dd]ebug/
-[Rr]elease/
 x64/
 build/
 [Bb]in/
 [Oo]bj/
+sqlite/
+![bB]in/[Rr]elease/
 
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
 !packages/*/build/
